--- a/stylesheets/scss/_wordpress.scss
+++ b/stylesheets/scss/_wordpress.scss
@@ -57,6 +57,7 @@
 .wp-block-code code {
   display: block;
   white-space: pre;
+  overflow-wrap: normal;
 }
 
 .screen-reader-text {
